objects/CountryStateTable__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>the mapping between country and state</description>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StateCode__c</fullName>
        <label>State Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StateName__c</fullName>
        <label>State Name</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <label>Country State Table</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Country__c</columns>
        <columns>StateCode__c</columns>
        <columns>StateName__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>